--- a/src/portfolioComponents/Home/Home.css
+++ b/src/portfolioComponents/Home/Home.css
@@ -2,3 +2,16 @@
     width: 100%;
     background-color: #1e1f30;
 }
+
+.header-container {
+    margin-top: 10%;
+    width: 100%;
+}
+
+.header-container h5 {
+    font-weight: 200;
+    font-size: 1rem;
+    letter-spacing: 0.1rem;
+    margin-top: 1%;
+    margin-bottom: 3%;
+}
