--- a/src/portfolioComponents/ContactMe/Form.css
+++ b/src/portfolioComponents/ContactMe/Form.css
@@ -17,18 +17,21 @@
     border: none;
     border-radius: 10px;
     height: 6vh;
-    width: 98%;
+    width: 92%;
     margin-top: 2%;
     background-color: rgb(229, 229, 229);
+    padding-left: 3%;
 }
 
 #message {
     height: 13vh;
-    width: 98%;
+    width: 92%;
     margin-top: 2%;
     border: none;
     border-radius: 10px;
     background-color: rgb(229, 229, 229);
+    padding-top: 2%;
+    padding-left: 3%;
 }
 
 .send-button {
@@ -49,10 +52,10 @@
     border: 1px solid #1e1f30;
 }
 
-@media screen and (max-width:450px) {
+@media screen and (max-width: 450px) {
     .input-container input,
     #message {
-        width: 95%;
+        width: 92%;
     }
     .send-button {
         margin-left: -60%;
