--- a/src/portfolioComponents/Achievements/Achievement.css
+++ b/src/portfolioComponents/Achievements/Achievement.css
@@ -16,3 +16,20 @@
     align-items: center;
     justify-content: center;
 }
+
+.carousel-wrapper {
+    position: absolute;
+    padding-top: 2%;
+    width: 80%;
+}
+
+.img-container {
+    height: 30vh;
+    width: 80%;
+}
+
+.img-container>img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
