--- a/src/portfolioComponents/Home/Profile.css
+++ b/src/portfolioComponents/Home/Profile.css
@@ -75,7 +75,7 @@
 .profile-photo-container {
     height: 92%;
     width: 92%;
-    background-image: url('../../assets/Home/Kavin.JPG');
+    background-image: url("../../assets/Home/Kavin.JPG");
     border-radius: 50%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -131,7 +131,7 @@
     transition: 0.7s ease-in-out;
 }
 
-@media screen and (max-width:900px) {
+@media screen and (max-width: 900px) {
     .profile-image-container {
         height: 15rem;
         width: 15rem;
@@ -153,13 +153,13 @@
     }
 }
 
-@media screen and (max-width:800px) {
+@media screen and (max-width: 800px) {
     .profile-container {
         flex-direction: column-reverse;
     }
     .profile-image-container {
-        height: 12rem;
-        width: 12rem;
+        height: 17rem;
+        width: 17rem;
     }
     .profile-details-container {
         margin-top: 5%;
@@ -180,7 +180,7 @@
     }
 }
 
-@media screen and (max-width:600px) {
+@media screen and (max-width: 600px) {
     .button-container {
         margin-left: -30%;
     }
@@ -189,7 +189,7 @@
     }
 }
 
-@media screen and (max-width:450px) {
+@media screen and (max-width: 450px) {
     .social-media-container {
         margin-top: 2rem;
     }
@@ -210,7 +210,8 @@
         margin-left: -30%;
     }
     .profile-image-container {
-        height: 15rem;
-        width: 15rem;
+        margin-top: -20%;
+        height: 20rem;
+        width: 20rem;
     }
 }
