--- a/src/portfolioComponents/Resume/Resume.css
+++ b/src/portfolioComponents/Resume/Resume.css
@@ -48,15 +48,35 @@
     cursor: pointer;
 }
 
-.resume-items li:hover {
+.resume-items li:hover,
+.active {
     color: #fff;
     background-color: #1e1f30;
     transition: 0.5s ease-in-out;
 }
 
 .resume-list-detail-container {
+    height: 50vh;
     width: 60%;
     margin: 0 auto;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+}
+
+::-webkit-scrollbar-track {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+    background: transparent;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: transparent;
 }
 
 .resume-list-details li {
