--- a/src/portfolioComponents/Resume/Resume.css
+++ b/src/portfolioComponents/Resume/Resume.css
@@ -48,7 +48,6 @@
     cursor: pointer;
 }
 
-.resume-items li:hover,
 .active {
     color: #fff;
     background-color: #1e1f30;
@@ -80,6 +79,15 @@
 }
 
 .resume-list-details li {
+    margin-left: 10%;
+    text-align: left;
+    padding-left: 1%;
+    font-size: 2rem;
+    line-height: 2rem;
+    color: #e63c22;
+}
+
+.resume-list-detailss li {
     margin-left: 10%;
     text-align: left;
     padding-left: 1%;
@@ -118,6 +126,12 @@
     color: #000;
     font-size: 0.9rem;
     font-weight: 600;
+}
+
+.project-description {
+    color: #000;
+    font-size: 0.9rem;
+    font-weight: 400;
 }
 
 @media screen and (max-width: 1040px) {
