--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,6 @@
     padding: 0;
     margin: 0;
     box-sizing: content-box;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Roboto", sans-serif;
+    scroll-behavior: smooth;
 }
