--- a/src/portfolioComponents/AboutMe/Details.css
+++ b/src/portfolioComponents/AboutMe/Details.css
@@ -77,12 +77,16 @@
     background-color: #1e1f30;
     color: #fff;
     cursor: pointer;
+    background: linear-gradient(to right, #1e1f30 50%, #494b70 50%);
+    background-color: transparent;
+    background-size: 200% 100%;
+    background-position: left bottom;
+    transition: all 0.7s ease-out;
 }
 
 .hire-me-button1:hover {
-    background-color: #494b70;
     color: #fff;
-    transition: 0.7s ease-out;
+    background-position: right bottom;
 }
 
 .get-resume-button1 {
@@ -91,18 +95,21 @@
     border: none;
     font-size: 1rem;
     border-radius: 25px;
-    background-color: #e63c22;
     color: #fff;
     cursor: pointer;
+    background: linear-gradient(to right, #e63c22 50%, #ff634a 50%);
+    background-color: transparent;
+    background-size: 200% 100%;
+    background-position: left bottom;
+    transition: all 0.7s ease-out;
 }
 
 .get-resume-button1:hover {
-    background-color: #8b1301;
     color: #fff;
-    transition: 0.7s ease-in-out;
+    background-position: right bottom;
 }
 
-@media screen and (max-width:1040px) {
+@media screen and (max-width: 1040px) {
     .highlights li {
         margin-left: 6%;
     }
@@ -115,7 +122,7 @@
     }
 }
 
-@media screen and (max-width:1005px) {
+@media screen and (max-width: 1005px) {
     .image-container {
         height: 73vh;
     }
@@ -124,7 +131,7 @@
     }
 }
 
-@media screen and (max-width:900px) {
+@media screen and (max-width: 900px) {
     .button-container1 {
         gap: 6rem;
     }
@@ -133,13 +140,13 @@
     }
 }
 
-@media screen and (max-width:820px) {
+@media screen and (max-width: 820px) {
     .image-container {
         height: 75vh;
     }
 }
 
-@media screen and (max-width:800px) {
+@media screen and (max-width: 800px) {
     .detail-container {
         margin-top: 5%;
         flex-direction: column;
@@ -167,7 +174,7 @@
     }
 }
 
-@media screen and (max-width:700px) {
+@media screen and (max-width: 700px) {
     .image-container {
         height: 80vh;
     }
@@ -176,7 +183,7 @@
     }
 }
 
-@media screen and (max-width:600px) {
+@media screen and (max-width: 600px) {
     .button-container1 {
         gap: 7rem;
     }
@@ -191,7 +198,7 @@
     }
 }
 
-@media screen and (max-width:450px) {
+@media screen and (max-width: 450px) {
     .image-container {
         width: 100%;
         height: 40vh;
