--- a/src/portfolioComponents/Achievements/Achievements.css
+++ b/src/portfolioComponents/Achievements/Achievements.css
@@ -13,7 +13,7 @@
 
 .img-container {
     height: 50vh;
-    width: 50%;
+    width: 100%;
     /* border-radius: 100px 0px 100px 0px; */
 }
 
@@ -21,5 +21,17 @@
     height: 100%;
     width: 100%;
     /* border-radius: 100px 0px 100px 0px; */
-    object-fit: cover;
+    object-fit: contain;
+}
+
+.carousel .slide .legend {
+    background: none;
+    opacity: 1;
+}
+
+.live-demo-button {
+    padding: 2%;
+    background: none;
+    border: 1px solid #e63c22;
+    color: #e63c22;
 }
