--- a/src/portfolioComponents/Home/Footer.css
+++ b/src/portfolioComponents/Home/Footer.css
@@ -1,31 +1,31 @@
-.footer-container {
+.footers-container {
     width: 100%;
     height: 14vh;
 }
 
-.footer-container>img {
+.footers-container>img {
     height: 100%;
     width: 100%;
     object-fit: cover;
 }
 
-@media screen and (max-width:900px) {
-    .footer-container {
+@media screen and (max-width: 900px) {
+    .footers-container {
         height: 10vh;
     }
 }
 
-@media screen and (max-width:800px) {
-    .footer-container {
+@media screen and (max-width: 800px) {
+    .footers-container {
         height: 8.5vh;
     }
 }
 
-@media screen and (max-width:450px) {
-    .footer-container {
+@media screen and (max-width: 450px) {
+    .footers-container {
         height: 3vh;
     }
-    .footer-container>img {
+    .footers-container>img {
         height: 103%;
     }
 }
