--- a/src/portfolioComponents/Resume/Resume.css
+++ b/src/portfolioComponents/Resume/Resume.css
@@ -83,7 +83,7 @@
     text-align: left;
     padding-left: 1%;
     font-size: 2rem;
-    line-height: 2rem;
+    line-height: 3rem;
     color: #e63c22;
 }
 
@@ -209,7 +209,7 @@
         color: #1e1f30;
         cursor: pointer;
     }
-    .resume-menus li:hover {
+    .resume-menus li.icon-active {
         color: #fff;
         background-color: #1e1f30;
     }
