--- a/src/portfolioComponents/Achievements/Achievements.css
+++ b/src/portfolioComponents/Achievements/Achievements.css
@@ -100,3 +100,36 @@
     border: none;
     background-position: right bottom;
 }
+
+@media screen and (max-width: 900px) {
+    .project-card-container {
+        width: 40%;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .projects-container {
+        flex-direction: column;
+    }
+    .project-card-container {
+        width: 50%;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .project-card-container {
+        width: 60%;
+    }
+}
+
+@media screen and (max-width: 450px) {
+    .project-card-container {
+        width: 100%;
+    }
+    .project-image-container {
+        height: 24vh;
+    }
+    .project-description-container {
+        height: 21vh;
+    }
+}
